Fix: some blurry icons

--- a/emonocot-static/src/main/less/glyphicons.less
+++ b/emonocot-static/src/main/less/glyphicons.less
@@ -476,7 +476,7 @@ html, html .halflings {
   height: 48px;
   line-height: 48px;
   vertical-align: middle;
-  background-image: url(./images/glyphicons.png);
+  background-image: url(./images/glyphicons.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
   vertical-align: middle;
